Fix tab spacing and remove debug/unnecessary code

--- a/app/assets/stylesheets/bootstrap/bootstrap-custom.css
+++ b/app/assets/stylesheets/bootstrap/bootstrap-custom.css
@@ -1,18 +1,9 @@
 body > .container {
-  padding-top: 40px;
-  background-color: white;
+	padding-top: 40px;
 }
 
-/*
- * Responsive stypes
- */
 @media (max-width: 980px) {
-
-  body > .container {
-    padding-top: 0;
-  }
-  .navbar-fixed-top {
-    margin-bottom: 0;
-  }
-
-} /* END: @media (max-width: 980px) */
+	body > .container {
+		padding-top: 0;
+	}
+}
